hphp/hack/test/typecheck/reactive/rx_if_implements18.php.exp
File "rx_if_implements18.php", line 18, characters 16-16:
Class B does not correctly implement all required members  (Typing[4203])
File "rx_if_implements18.php", line 18, characters 26-26:
Some members are incompatible with those declared in type A
Read the following to see why:
File "rx_if_implements18.php", line 20, characters 28-34:
Member mayberx has the wrong type
File "rx_if_implements18.php", line 15, characters 28-34:
This function is conditionally shallow reactive (condition type: \Rx1).
File "rx_if_implements18.php", line 20, characters 28-34:
This function is conditionally shallow reactive (condition type: \Rx2).
